[AURA-15](feat): update forum service
